# prdy

./: .gitignore  CLAUDE.md  LICENSE  README.md  bootstrap.py  build_config.py  clean.sh  launch_gui.py  launch_prdy_gui.bat  launch_prdy_gui.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh  simple_gui_launch.py  test_basic_structure.py
prdy/: __init__.py  __main__.py  app_controller.py  cli.py  gui.py
prdy-env/: pyvenv.cfg
prdy/engines/: question_engine.py
prdy/models/: database.py  prd.py
prdy/utils/: ai_integration.py  environment_manager.py  logger.py  prd_service.py  settings_manager.py  state_detector.py
